src/client/public/styles.css
/* html classes */
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  height: 100%;
  background-color: bisque;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  overscroll-behavior-y: contain;
}

/* Specific classes */

#game-canvas {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  pointer-events: none;
}

main {
  flex: 1 0 auto;
  display: flex;
  align-items: center;
}

#start-game-modal {
  border: #eee;
  background-color: #fdfdfd;
  border-radius: 8px;
  padding: 32px;
  /* min-width: 400px; */
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Utility classes */

.mt-2 {
  margin-top: 16px;
}

.hidden {
  display: none !important;
}

